3rd common task: Register for classes on your wishlist

--- a/public/mypack/index.html
+++ b/public/mypack/index.html
@@ -52,6 +52,11 @@
       <h2>Common task: Find a class that meets a degree requirement</h2>
     </div>
   </div>
+  <div class="row">
+    <div class="twelvecol">
+      <h2>Common task: Register for classes on your wishlist</h2>
+    </div>
+  </div>
 </section><!--container-->
 </body>
 </html>
