Complete first draft of screenshots.

--- a/public/mypack/index.html
+++ b/public/mypack/index.html
@@ -10,6 +10,17 @@
   <link rel="stylesheet" href="stylesheets/1140.css" type="text/css" media="screen" />
   <link rel="stylesheet" href="stylesheets/styles.css" type="text/css" media="screen" />
   <link rel="stylesheet" href="stylesheets/application.css" type="text/css" media="screen" />
+
+  <style>
+    figure {
+      margin-bottom: 20px;
+    }
+    figure img {
+      border: 1px solid #C00;
+	  margin: auto;
+	  width: auto;
+    }
+  </style>
 </head>
 <body>
 <section class="container">
@@ -42,8 +53,12 @@
     <div class="sixcol last">
       <h3>MyPack</h3>
       <figure>
-      <img>
-      <figcaption></figcaption>
+        <a href="/mypack/f1b.1.png"><img src="/mypack/f1b.1.png" /></a>
+      <figcaption>Monolithic form to be navigated</figcaption>
+      </figure>
+      <figure>
+        <a href="/mypack/f1b.2.png"><img src="/mypack/f1b.2.png" /></a>
+      <figcaption>The search results. Note the lack of any description of the class, in case you were curious about what you were searching for.</figcaption>
       </figure>
     </div>
   </div>
@@ -51,11 +66,56 @@
     <div class="twelvecol">
       <h2>Common task: Find a class that meets a degree requirement</h2>
     </div>
+    <div class="sixcol">
+      <h3>FreshTracks</h3>
+      <figure>
+        <a href="/mypack/f2.1.png"><img src="/mypack/f2.1.png" /></a>
+      <figcaption>All the requirements, right on one page</figcaption>
+      </figure>
+      <figure>
+        <a href="/mypack/f2.2.png"><img src="/mypack/f2.2.png" /></a>
+      <figcaption>Opening a requirement group lets you see all the classes that fill it, and with description and a listing of sections.</figcaption>
+      </figure>
+		</div>
+    <div class="sixcol last">
+      <h3>MyPack</h3>
+      <figure>
+        <a href="/mypack/f2b.1.png"><img src="/mypack/f2b.1.png" /></a>
+      <figcaption>MyPack will show you a list of all the options for an requirement group, but each one opens up a new window:</figcaption>
+      </figure>
+      <figure>
+        <a href="/mypack/f2b.2.png"><img src="/mypack/f2b.2.png" /></a>
+      <figcaption>From here, if you decide you like the class, you can go try and register for it. But you have to do that in the same window; MyPack breaks if you use two different browser windows or tabs. And if registering for the class fails, you're back to square one, looking for a class to take.</figcaption>
+      </figure>
+	</div>
   </div>
   <div class="row">
     <div class="twelvecol">
       <h2>Common task: Register for classes on your wishlist</h2>
     </div>
+    <div class="sixcol">
+      <h3>FreshTracks</h3>
+      <figure>
+        <a href="/mypack/f3.1.png"><img src="/mypack/f3.1.png" /></a>
+      <figcaption>Yeah, it really is that easy.</figcaption>
+      </figure>
+		</div>
+    <div class="sixcol last">
+      <h3>MyPack</h3>
+      <figure>
+        <a href="/mypack/f3b.1.png"><img src="/mypack/f3b.1.png" /></a>
+      <figcaption>Check all the classes you want to add at once. Why not one at a time? We don't know either.</figcaption>
+      </figure>
+      <figure>
+        <a href="/mypack/f3b.2.png"><img src="/mypack/f3b.2.png" /></a>
+      <figcaption>Gratuitous "Are you sure?" page.</figcaption>
+      </figure>
+      <figure>
+        <a href="/mypack/f3b.3.png"><img src="/mypack/f3b.3.png" /></a>
+      <figcaption>Finally.</figcaption>
+      </figure>
+
+	</div>
   </div>
 </section><!--container-->
 </body>
